# skeleton-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md  config.env
.devcontainer/: Dockerfile  devcontainer.json
.docker/: debian-clang.Dockerfile  debian-gcc.Dockerfile  dev.Dockerfile
.github/workflows/: build.yml  cmake.yml  docker-lint.yml  formatting.yml
.vscode-example/: extensions.json
apps/: main.cpp
cmake/: clang-format.cmake  cppcheck.cmake  doxygen.cmake  version.cmake
include/: args_parser.h  global.h  pile.h
src/: args_parser.cpp  pile.cpp
test/integration/: run.py
test/unit/: pile.test.cpp  test.h
